--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,7 +21,7 @@ jar {
                 'Class-Path': 'common.jar',
                 'Main-Class': 'org.joshi.server.HostApp'
     }
-    destinationDirectory.set(file("$rootDir/bin"))
+    destinationDirectory.set(file("$rootDir/cucumber"))
 }
 
 test {
