[CODE] Update gradle and run configurations to correctly clean and run project

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -24,6 +24,10 @@ jar {
     destinationDirectory.set(file("$rootDir/cucumber"))
 }
 
+clean {
+    delete "$rootDir/cucumber/client.jar"
+}
+
 test {
     useJUnitPlatform()
 }
